fix engine depth bug.

--- a/Evolution.ini
+++ b/Evolution.ini
@@ -1,6 +1,7 @@
 [MainEngine]
 engine_type = uci
 engine_exec = engine\pikafish_230408\pikafish.exe
+#engine_exec = engine\pikafish_240314\pikafish-bmi2.exe
 
 [AssitEngine]
 engine_type = ucci
