down to python3.8 pyqt5 for win7

--- a/Evolution.ini
+++ b/Evolution.ini
@@ -1,3 +1,3 @@
 [MainEngine]
 engine_type = uci
-engine_exec = engine\Pikafish_240917\pikafish-bmi2.exe
+engine_exec = engine\Pikafish_230408\pikafish.exe
